<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Harmony</string>
    <string name="email">Correo</string>
    <string name="user_name">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="sign_up">Crear cuenta</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="continuar_google">CONTINUAR CON GOOGLE</string>
    <string name="No_tienes_cuenta">¿NO TIENES UNA CUENTA?</string>
    <string name="crea_una">CREA UNA</string>
    <string name="Ya_tienes_cuenta">¿YA TIENES UNA CUENTA?</string>
    <string name="inicia_sesion">INICIA SESIÓN</string>
    <string name="error_campos_vacios">Por favor, complete todos los campos</string>
    <string name="error_correo_invalido">Por favor, introduce un correo electrónico válido</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="login_success">Inicio de sesión exitoso</string>
    <string name="error_apodo">Error al obtener el apodo</string>
    <string name="cuenta_creada_exitosamente">Cuenta creada exitosamente</string>
    <string name="correo_en_uso">El correo electrónico ya está en uso</string>
    <string name="error_al_crear_cuenta">Error al crear la cuenta</string>
    <string name="error_al_iniciar_sesion">Correo o contraseña incorrectos</string>
    <string name="background_image" translatable="false">Background_image</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="donaciones">Donaciones</string>
    <string name="centro_de_ayuda">Centro de ayuda</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="header_linea_ayuda">Linea de Ayuda</string>
    <string name="te_gustar_a_contar_algo">¿Te gustaría contar algo?</string>
    <string name="estoy_para_lo_que_necesites">Estoy para lo que necesites</string>
    <string name="container_chatbot" translatable="false">Container_chatbot</string>
    <string name="flecha_para_acceder" translatable="false">Flecha para acceder</string>
    <string name="linea_de_ayuda">¡Línea de ayuda!</string>
    <string name="comun_cate_con_amigos">Comunícate con amigos o familiares de confianza. Si no están disponibles contacta a una de las siguientes líneas.</string>
    <string name="estas_en_crisis">¿Estás en crisis?</string>
    <string name="recuerda_no_estas_solo">Recuerda, no estás solo.\nTu llamada es 100% anónima y segura</string>
    <string name="_800_911_2000" translatable="false">800–911–2000</string>
    <string name="cobertura_nacional_disponible_24_7">Cobertura nacional. Disponible 24/7</string>
    <string name="telefono_de_la_linea_de_ayuda">Teléfono de la linea de ayuda</string>
    <string name="cobertura_en_jalisco_disponible_24_7">Cobertura en Jalisco. Disponible 24/7</string>
    <string name="_911" translatable="false">911</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="tucorreo_example_com">tuCorreo@example.com</string>
    <string name="editar_informacion_de_perfil">Editar información de perfil</string>
    <string name="seguridad">Seguridad</string>
    <string name="tema">Tema</string>
    <string name="modo_oscuro">Modo oscuro</string>
    <string name="ayuda_soporte">Ayuda y soporte</string>
    <string name="contactanos">Contáctanos</string>
    <string name="politica_privacidad">Política de privacidad</string>
    <string name="ciudad">Ciudad</string>
    <string name="genero">Género</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="prefiero_no_decirlo">Prefiero no decirlo</string>
    <string name="disponible_24_7">Disponible 24/7</string>
    <string name="inicio">Inicio</string>
    <string name="linea_de_la_vida">Línea de la Vida</string>
    <string name="_075" translatable="false">075</string>
    <string name="emergencias">Emergencias</string>
    <string name="espa_ol">Español</string>
    <string name="ingles">Inglés</string>
    <string name="idioma">Idioma</string>
    <string name="idioma_actual">Español</string>
    <string name="apodo_desconocido">Apodo desconocido</string>
    <string name="correo_desconocido">Correo desconocido</string>
    <string name="apodo_no_encontrado">Apodo no encontrado</string>
    <string name="usuario_no_autenticado">Usuario no autenticado</string>
    <string name="titulo_header_inicio">Inicio</string>
    <string name="seleccionaUnIdioma">Selecciona un idioma</string>
    <string name="nombre">Nombre</string>
    <string name="domicilio">Domicilio</string>
    <string name="Numero_Telefonico">Numero Telefonico</string>
    <string name="actualizar">Actualizar</string>
    <string name="apodo">Apodo</string>
    <string name="o">O</string>
    <string name="header_privacidad">En Harmony, tu privacidad y seguridad son nuestra prioridad.</string>
    <string name="texto_privacidad">Entendemos lo importante que es sentirte seguro al compartir tus pensamientos y emociones. Por eso, todas tus conversaciones con nuestro chatbot están protegidas con tecnología de encriptación avanzada, garantizando que tus datos personales y tu información de salud mental sean confidenciales y seguros. En Harmony, no almacenamos tus conversaciones de manera identificable, y tus datos nunca serán compartidos con terceros sin tu consentimiento explícito. Nuestro objetivo es brindarte un espacio seguro donde puedas expresarte libremente y recibir el apoyo que necesitas. Tu bienestar emocional es importante para nosotros, y eso incluye proteger tu privacidad en todo momento. 🌟 Si tienes alguna pregunta sobre cómo manejamos tus datos, no dudes en contactarnos. Estamos aquí para ayudarte. — El equipo de Harmony 💙</string>
    <string name="hoy">Hoy</string>
    <string name="ED_feliz">Feliz</string>
    <string name="ED_triste">Triste</string>
    <string name="ED_enojado">Enojado</string>
    <string name="ED_amor">Amor</string>
    <string name="ED_sorprendido">Sorprendido</string>
    <string name="A_trabajo">Trabajo</string>
    <string name="A_amigos">Amigos</string>
    <string name="A_familia">Familia</string>
    <string name="A_escuela">Escuela</string>
    <string name="A_pareja">Pareja</string>
    <string name="A_hobbies">Hobbies</string>
    <string name="A_salud">Salud</string>
    <string name="A_otro">Otro</string>
    <string name="ME_Emociones">Selecciona una emoción antes de continuar</string>
    <string name="ME_Actividades">Selecciona una actividad antes de continuar</string>
    <string name="ME_Date">Selecciona una fecha válida</string>
    <string name="ME_Time">Selecciona una hora válida</string>
    <string name="ME_Fecha_Hora_Futura">No puedes seleccionar una fecha u hora futura</string>
    <string name="ME_Fecha_Futura">No puedes seleccionar una fecha futura</string>
    <string name="ME_Hora_Futura">No puedes seleccionar una hora futura</string>
    <string name="content_description_DatePicker">Abrir selector de fecha</string>
    <string name="content_description_TimePicker">Abrir selector de hora</string>
    <string name="pregunta_como_se_siente">¿Cómo te sientes?</string>
    <string name="selecciona_una_actividad">Selecciona una actividad</string>
    <string name="header_menu_principal">Inicio</string>
    <string name="title_activity_privacy_notice_screen" translatable="false">PrivacyNoticeScreen</string>
    <string name="title_activity_privecy_notice_screen" translatable="false">PrivecyNoticeScreen</string>
    <string name="header_perfil">Perfil</string>
    <string name="header_Editarperfil">Informacion del Perfil</string>
    <string name="relajacion">Relajación</string>
    <string name="error_contraseña_debil">La contraseña es demasiado débil. Intenta con una más segura.</string>
    <string name="error_usuario_invalido">Este usuario ha sido deshabilitado. Contacta al soporte.</string>
    <string name="error_sin_conexion">Error de red. Revisa tu conexión e intenta nuevamente.</string>
    <string name="chatbot" translatable="false">Chatbot</string>
    <string name="hola_soy_harmony">Hola, soy Harmony. ¿En qué puedo ayudarte hoy?</string>
    <string name="escribe_un_mensaje">Escribe un mensaje</string>
    <string name="Escribiendo">Escribiendo…</string>
    <string name="Nuestro_equipo" translatable="false">Nuestro equipo esta en linea \n Lun-Vie  •  9-17</string>
    <string name="Seguidores1" translatable="false">4,6K Seguidores   •   118 Pub</string>
    <string name="Seguidores2" translatable="false">1,3K Seguidores   •   85 Pub</string>
    <string name="Seguidores3" translatable="false">3,8K Seguidores   •   136 Pub</string>
    <string name="donacion">Donaciones</string>
    <string name="gracias_apoyo" translatable="false">Gracias por apoyar al pescadito &lt;3</string>
    <string name="seleccione_cantidad">Seleccione la cantidad a donar:</string>
    <string name="seleccione_metodo_pago">Seleccione un método de pago:</string>
    <string name="tarjeta_credito">Tarjeta de Crédito</string>
    <string name="paypal" translatable="false">Paypal</string>
    <string name="donar">DONAR</string>
    <string name="iniciar">INICIAR</string>
    <string name="Respiracion">Respiración</string>
    <string name="como_estuvo_el_dia">¿Cómo estuvo tu día?</string>
    <string name="lleva_un_registro">Lleva un registro de cómo te sientes.</string>
    <string name="eliminar_conversacion">¿Eliminar conversación?</string>
    <string name="confirmacion_eliminar_conversacion">¿Estás seguro de que deseas eliminar todo el historial de esta conversación? Esta acción no se puede deshacer.</string>
    <string name="eliminar">Eliminar</string>
    <string name="cancelar">Cancelar</string>
    <string name="domingoAbreviado">Dom</string>
    <string name="lunesAbreviado">Lun</string>
    <string name="martesAbreviado">Mar</string>
    <string name="miercolesAbreviado">Mié</string>
    <string name="juevesAbreviado">Jue</string>
    <string name="viernesAbreviado">Vie</string>
    <string name="sabadoAbreviado">Sáb</string>
    <string name="no_hay_datos_para_el_resumen_mensual">No hay suficientes datos para el resumen mensual.</string>
    <string name="no_hay_datos_para_el_resumen_semanal">No hay datos de emociones para esta semana aún.</string>
    <string name="resumen_mensual">Resumen Mensual</string>
    <string name="resumen_semanal">Resumen Semanal</string>
    <string name="popup_dia_grafico">Día</string>
    <string name="configuracion_de_notificaciones">Configuración de notificaciones</string>
    <string name="recordatorios_diarios">Recordatorios diarios</string>
    <string name="recibir_recordatorios_para_registrar_emocion">Recibir recordatorios para registrar emoción</string>
    <string name="info_notificaciones_texto_ejemplo">Ejemplo de notificación</string>
    <string name="web_client">58266237789-3hrbd9nsra34v6vvo70s13r105iv4cdm.apps.googleusercontent.com</string>
    <string name="error_al_iniciar_sesion_google">Error al iniciar sesión con Google</string>
    <string name="error_google_login_cancelado">Inicio de sesión con Google cancelado.</string>
    <string name="error_unknown">Error desconocido</string>
    <string name="error_contraseña_corta">La contraseña debe tener al menos 6 caracteres.</string>
    <string name="registro_exitoso">Cuenta creada con éxito.</string>
    <string name="error_signup_failed">Error al crear cuenta.</string>
</resources>