<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_edit_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/editar_perfil" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications"
            android:title="@string/notificaciones" />
        <item
            android:id="@+id/nav_donations"
            android:icon="@drawable/ic_donations"
            android:title="@string/donaciones" />
        <item
            android:id="@+id/nav_help_center"
            android:icon="@drawable/ic_help_center"
            android:title="@string/centro_de_ayuda" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/cerrar_sesi_n" />
    </group>

</menu>