<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/background_image_inicio"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/background_image"
            android:scaleType="centerCrop"
            android:src="@drawable/background_inicio"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <include
            android:id="@+id/custom_header"
            layout="@layout/custom_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <FrameLayout
            android:id="@+id/container_chatbot_background"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:background="@drawable/container_chatbot_background"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintTop_toBottomOf="@id/custom_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/logout">

            <ImageView
                android:id="@+id/image_chatbot_state"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:contentDescription="@string/container_chatbot"
                android:scaleType="centerCrop" />

            <ImageView
                android:id="@+id/image_arrow_right"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="end|center_vertical"
                android:contentDescription="@string/flecha_para_acceder"
                android:scaleType="centerInside"
                android:src="@drawable/image_arrow_right" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/container_chatbot_content1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/container_chatbot_content1"
            android:gravity="start|center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            app:layout_constraintTop_toTopOf="@id/container_chatbot_background"
            app:layout_constraintStart_toStartOf="@id/container_chatbot_background"
            app:layout_constraintEnd_toEndOf="@id/container_chatbot_background"
            app:layout_constraintBottom_toBottomOf="@id/container_chatbot_background">

            <ImageView
                android:id="@+id/avatar_chatbot_content"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                android:src="@drawable/logo_harmony" />

            <LinearLayout
                android:id="@+id/text_chatbot_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:gravity="start|top"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_chatbot_header"
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:gravity="start|center_vertical"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/te_gustar_a_contar_algo"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/text_chatbot_subhead"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="4dp"
                    android:gravity="start|center_vertical"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/estoy_para_lo_que_necesites"
                    android:textColor="#FF1D1B20"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/editar_perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cerrar_sesi_n"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_chatbot_background"/>

        <Button
            android:id="@+id/editar_perfil_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editar_perfil"
            app:layout_constraintBottom_toTopOf="@id/logout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cerrar_sesi_n"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_chatbot_background" />

        <!-- Contenedor de la linea de ayuda -->
        <FrameLayout
            android:id="@+id/container_linea_de_ayuda_background"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:background="@drawable/container_chatbot_background"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/bottom_navigation">

            <ImageView
                android:id="@+id/image_linea_de_ayuda_state"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:contentDescription="@string/container_chatbot"
                android:scaleType="centerCrop" />

            <ImageView
                android:id="@+id/image_arrow_right_linea_de_ayuda"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="end|center_vertical"
                android:contentDescription="@string/flecha_para_acceder"
                android:scaleType="centerInside"
                android:src="@drawable/image_arrow_right" />
        </FrameLayout>

        <!-- Lo de adentro del contenedor de la linea de ayuda -->
        <LinearLayout
            android:id="@+id/container_linea_de_ayuda_content1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/container_chatbot_content1"
            android:gravity="start|center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            app:layout_constraintTop_toTopOf="@id/container_linea_de_ayuda_background"
            app:layout_constraintStart_toStartOf="@id/container_linea_de_ayuda_background"
            app:layout_constraintEnd_toEndOf="@id/container_linea_de_ayuda_background"
            app:layout_constraintBottom_toBottomOf="@id/container_linea_de_ayuda_background">

            <ImageView
                android:id="@+id/avatar_linea_de_ayuda_content"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                android:src="@drawable/ic_linea_de_ayuda" />

            <LinearLayout
                android:id="@+id/text_linea_de_ayuda_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:gravity="start|top"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_linea_de_ayuda_header"
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:gravity="start|center_vertical"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/linea_de_ayuda"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/text_linea_de_ayuda_subhead"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="4dp"
                    android:gravity="start|center_vertical"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/disponible_24_7"
                    android:textColor="#FF1D1B20"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/blue_dark"
            app:itemIconTint="@color/white"
            app:itemTextColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/bottom_navigation_menu" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>